Bug 1396980 - Spending too much time making ranges for spellchecker on Facebook page, r=smaug